--- a/Programming/4_sem (OVP)/Lab1/mainwindow.ui
+++ b/Programming/4_sem (OVP)/Lab1/mainwindow.ui
@@ -509,5 +509,21 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>pushButton_Exit</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>387</x>
+     <y>568</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>408</x>
+     <y>333</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
 </ui>
