Доделал лабораторную №1 по ОВП
Еееее, рокккк!
P.S. Внимние! В коде экстремальное количество костылей. При просмотре
исходников берегите психику!

--- a/Programming/4_sem (OVP)/Lab1/addrec.ui
+++ b/Programming/4_sem (OVP)/Lab1/addrec.ui
@@ -11,9 +11,9 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Добавление записи</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -33,6 +33,9 @@
         <widget class="QRadioButton" name="radioButton_section1">
          <property name="text">
           <string>Раздел 1</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
