--- a/Programming/4_sem (OVP)/Lab1/addrec.ui
+++ b/Programming/4_sem (OVP)/Lab1/addrec.ui
@@ -10,6 +10,18 @@
     <height>221</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>358</width>
+    <height>221</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>358</width>
+    <height>221</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Добавление записи</string>
   </property>
