--- a/Programming/4_sem (OVP)/Lab1/mainwindow.ui
+++ b/Programming/4_sem (OVP)/Lab1/mainwindow.ui
@@ -10,6 +10,24 @@
     <height>667</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>817</width>
+    <height>667</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>817</width>
+    <height>667</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Лаб. 1</string>
   </property>
@@ -331,11 +349,14 @@
        <height>22</height>
       </rect>
      </property>
+     <property name="toolTip">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="whatsThis">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
      <property name="editable">
       <bool>false</bool>
-     </property>
-     <property name="currentText">
-      <string>По алфавиту (А-Я)</string>
      </property>
      <item>
       <property name="text">
