--- a/Programming/4_sem (OVP)/Lab2/mainwindow.ui
+++ b/Programming/4_sem (OVP)/Lab2/mainwindow.ui
@@ -6,25 +6,25 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>591</width>
-    <height>422</height>
+    <width>400</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="mouseTracking">
-   <bool>true</bool>
+   <bool>false</bool>
   </property>
   <property name="windowTitle">
    <string>Paint Lite</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="mouseTracking">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QGraphicsView" name="graphicsView">
       <property name="mouseTracking">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -35,11 +35,17 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>591</width>
+     <width>400</width>
      <height>21</height>
     </rect>
    </property>
+   <property name="mouseTracking">
+    <bool>false</bool>
+   </property>
    <widget class="QMenu" name="menuFile">
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>File</string>
     </property>
@@ -50,10 +56,16 @@
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Edit</string>
     </property>
     <widget class="QMenu" name="menuPen">
+     <property name="mouseTracking">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Pen</string>
      </property>
@@ -62,6 +74,9 @@
        <normaloff>:/actions/pen</normaloff>:/actions/pen</iconset>
      </property>
      <widget class="QMenu" name="menuStyle">
+      <property name="mouseTracking">
+       <bool>false</bool>
+      </property>
       <property name="title">
        <string>Style</string>
       </property>
@@ -77,6 +92,9 @@
     <addaction name="menuPen"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
+    <property name="mouseTracking">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>Help</string>
     </property>
@@ -86,6 +104,11 @@
    <addaction name="menuEdit"/>
    <addaction name="menuHelp"/>
   </widget>
+  <widget class="QStatusBar" name="statusBar">
+   <property name="mouseTracking">
+    <bool>false</bool>
+   </property>
+  </widget>
   <widget class="QToolBar" name="mainToolBar">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
@@ -94,7 +117,7 @@
     </sizepolicy>
    </property>
    <property name="mouseTracking">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="movable">
     <bool>false</bool>
@@ -109,19 +132,14 @@
     <enum>LeftToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
-   <addaction name="actionColor"/>
    <addaction name="actionNew"/>
-   <addaction name="actionOpen"/>
    <addaction name="actionSave"/>
+   <addaction name="actionOpen"/>
+   <addaction name="actionColor"/>
    <addaction name="separator"/>
    <addaction name="actionExit"/>
-  </widget>
-  <widget class="QStatusBar" name="statusBar">
-   <property name="mouseTracking">
-    <bool>true</bool>
-   </property>
   </widget>
   <action name="actionNew">
    <property name="icon">
@@ -162,7 +180,7 @@
   <action name="actionExit">
    <property name="icon">
     <iconset resource="../resources/resources.qrc">
-     <normaloff>:/actions/exit</normaloff>:/actions/exit</iconset>
+     <normaloff>:/actions/X</normaloff>:/actions/X</iconset>
    </property>
    <property name="text">
     <string>Exit</string>
