Добавил считывание мыши в графическом окне
Лабораторная по ОВП №2
На самом деле, это довольно значительный шаг в сторону самого рисования,
не смотря на довольно маленький список измененного

--- a/Programming/4_sem (OVP)/Lab2/mainwindow.ui
+++ b/Programming/4_sem (OVP)/Lab2/mainwindow.ui
@@ -22,7 +22,7 @@
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QGraphicsView" name="picDrawingSurface">
+     <widget class="EventHandlingView" name="picDrawingSurface">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>0</horstretch>
@@ -39,10 +39,10 @@
        <enum>QFrame::Sunken</enum>
       </property>
       <property name="verticalScrollBarPolicy">
-       <enum>Qt::ScrollBarAlwaysOff</enum>
+       <enum>Qt::ScrollBarAsNeeded</enum>
       </property>
       <property name="horizontalScrollBarPolicy">
-       <enum>Qt::ScrollBarAlwaysOff</enum>
+       <enum>Qt::ScrollBarAsNeeded</enum>
       </property>
      </widget>
     </item>
@@ -281,6 +281,13 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>EventHandlingView</class>
+   <extends>QGraphicsView</extends>
+   <header location="global">eventhandlingview.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../resources/resources.qrc"/>
  </resources>
