--- a/Programming/4_sem (OVP)/Lab2/mainwindow.ui
+++ b/Programming/4_sem (OVP)/Lab2/mainwindow.ui
@@ -22,7 +22,7 @@
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="EventHandlingView" name="picDrawingSurface">
+     <widget class="QGraphicsView" name="picDrawingSurface">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>0</horstretch>
@@ -281,13 +281,6 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <customwidgets>
-  <customwidget>
-   <class>EventHandlingView</class>
-   <extends>QGraphicsView</extends>
-   <header location="global">eventhandlingview.h</header>
-  </customwidget>
- </customwidgets>
  <resources>
   <include location="../resources/resources.qrc"/>
  </resources>
