--- a/Programming/4_sem (OVP)/resources/resources.qrc
+++ b/Programming/4_sem (OVP)/resources/resources.qrc
@@ -16,5 +16,6 @@
         <file alias="X">images/X.png</file>
         <file alias="check">images/Checkmark.png</file>
         <file alias="warning">images/Warning.png</file>
+        <file alias="clock">images/clock.png</file>
     </qresource>
 </RCC>
