Настя опупела, когда я сделал этот коммит.

--- a/Programming/4_sem (OVP)/Lab5/mainwindow.ui
+++ b/Programming/4_sem (OVP)/Lab5/mainwindow.ui
@@ -153,7 +153,7 @@
           <bool>false</bool>
          </attribute>
         </widget>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <widget class="QListView" name="listView">
@@ -193,14 +193,13 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
-  <include location="../resources/resources.qrc"/>
   <include location="../resources/resources.qrc"/>
  </resources>
  <connections/>
