Доп.функции закончены
Я делаю все наоборот. Основной функционал будет в следующем коммите,
надеюсь

--- a/Programming/4_sem (OVP)/resources/resources.qrc
+++ b/Programming/4_sem (OVP)/resources/resources.qrc
@@ -17,5 +17,6 @@
         <file alias="check">images/Checkmark.png</file>
         <file alias="warning">images/Warning.png</file>
         <file alias="clock">images/clock.png</file>
+        <file alias="planet">images/saturn.png</file>
     </qresource>
 </RCC>
