--- a/Programming/4_sem (OVP)/SpaceSim/space.ui
+++ b/Programming/4_sem (OVP)/SpaceSim/space.ui
@@ -10,6 +10,12 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="font">
    <font>
     <family>Segoe UI</family>
@@ -17,6 +23,10 @@
   </property>
   <property name="windowTitle">
    <string>SpaceSim</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../resources/resources.qrc">
+    <normaloff>:/actions/planet</normaloff>:/actions/planet</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
