Починил физику и отрисовку
Есть проблемы с мержем объектов и не реализована часть функций работы с
настройками + так и не сделана генерация рандома по-умолчанию

--- a/Programming/4_sem (OVP)/SpaceSim/winchange.ui
+++ b/Programming/4_sem (OVP)/SpaceSim/winchange.ui
@@ -67,6 +67,29 @@
        </item>
       </layout>
      </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QLabel" name="label_Stars">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Number of stars</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="lineEdit_Stars"/>
+       </item>
+      </layout>
+     </item>
     </layout>
    </item>
    <item>
