--- a/Programming/4_sem (OVP)/SpaceSim/space.ui
+++ b/Programming/4_sem (OVP)/SpaceSim/space.ui
@@ -58,10 +58,19 @@
     <property name="title">
      <string>Menu</string>
     </property>
+    <widget class="QMenu" name="menuSet_collision">
+     <property name="title">
+      <string>Set collision</string>
+     </property>
+     <addaction name="actionMerge"/>
+     <addaction name="actionDestr"/>
+     <addaction name="actionStop"/>
+    </widget>
     <addaction name="actionNew"/>
     <addaction name="actionFile"/>
     <addaction name="actionSave"/>
     <addaction name="actionSize"/>
+    <addaction name="menuSet_collision"/>
     <addaction name="actionSP"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
@@ -71,7 +80,7 @@
      <bool>true</bool>
     </property>
     <property name="title">
-     <string> </string>
+     <string/>
     </property>
     <addaction name="actionKey_Up"/>
     <addaction name="actionKey_Down"/>
@@ -158,6 +167,9 @@
    </property>
   </action>
   <action name="actionKey_Up">
+   <property name="checkable">
+    <bool>false</bool>
+   </property>
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -190,6 +202,39 @@
    </property>
    <property name="shortcut">
     <string>Right</string>
+   </property>
+  </action>
+  <action name="actionDestr">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Destroy both objects</string>
+   </property>
+   <property name="shortcut">
+    <string>F2</string>
+   </property>
+  </action>
+  <action name="actionStop">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Stop simulation</string>
+   </property>
+   <property name="shortcut">
+    <string>F3</string>
+   </property>
+  </action>
+  <action name="actionMerge">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Merge two objects</string>
+   </property>
+   <property name="shortcut">
+    <string>F1</string>
    </property>
   </action>
  </widget>
