--- a/Programming/4_sem (OVP)/SpaceSim/space.ui
+++ b/Programming/4_sem (OVP)/SpaceSim/space.ui
@@ -255,7 +255,7 @@
   </action>
   <action name="actionSpace_color">
    <property name="checkable">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>Set space color</string>
@@ -265,9 +265,6 @@
    </property>
   </action>
   <action name="actionStars_color">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
    <property name="text">
     <string>Set stars color</string>
    </property>
