--- a/Programming/4_sem (OVP)/SpaceSim/winchange.ui
+++ b/Programming/4_sem (OVP)/SpaceSim/winchange.ui
@@ -16,7 +16,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>Change window size</string>
+   <string>Change window</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
