--- a/Programming/5_sem (ChMV)/lab6/dialog.ui
+++ b/Programming/5_sem (ChMV)/lab6/dialog.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Восстановление пароля</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../resources/resources.qrc">
+    <normaloff>:/other/logo</normaloff>:/other/logo</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -32,6 +36,12 @@
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLabel" name="question">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>Вопрос:</string>
        </property>
@@ -65,6 +75,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="finish">
+       <property name="focusPolicy">
+        <enum>Qt::NoFocus</enum>
+       </property>
        <property name="text">
         <string>Я вспомнил!</string>
        </property>
@@ -74,6 +87,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources/resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
