Доработал систему автосейва (ЧМВ)
Предзакрывающая запись в файл (а точнее - чтение из временного) не работает

--- a/Programming/5_sem (ChMV)/lab7/mainwindow.ui
+++ b/Programming/5_sem (ChMV)/lab7/mainwindow.ui
@@ -28,7 +28,7 @@
        <widget class="QTextEdit" name="textEdit"/>
       </item>
       <item>
-       <widget class="QLabel" name="label_3">
+       <widget class="QLabel" name="Label2">
         <property name="text">
          <string>TextLabel</string>
         </property>
